k8s-logging-efk/k8s/efk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: kube-logging
  # annotations:
  #    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: efk.exchangeweb.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
